// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create email test Creates email from pending notifications monthly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html>
  <head>
    <meta http-equiv="Content-Type" content="text/html charset=UTF-8" />
    <style>
      #body {
        font-family: Arial, Helvetica, sans-serif;
        font-size: 14px;
        color: #000000;
      }
      #body a {
        color: inherit;
      }
      .border {
        border: 3px solid black;
        border-radius: 10px;
        padding: 4% 0;
        margin: 4% 0;
        width: 550px;
      }
      table {
        width: 100%;
        border: 0;
      }
      .settings-table-container,
      .project-image-table-container {
        margin-bottom: 8%;
      }

      .greeting-container {
        margin-bottom: 8%;
      }
      .greeting-container,
      .notifications-container {
        margin-left: 8%;
      }
      .notifications-header {
        font-size: 24px;
      }
      .notifications-header-icon {
        margin-right: 8px;
      }

      @media only screen and (max-width: 550px) {
        .table-container {
          width: 100%;
        }
      }
    </style>
  </head>
  <body id="body">
    <table class="email-table-container">
      <tr>
        <td align="center">
          <div class="border">
            <table class="project-image-table-container">
              <tr>
                <td align="center">
                  <img
                    width="144"
                    alt=""
                    src="http://cdn.mcauto-images-production.sendgrid.net/cb5a685b085b7e7c/f48e2455-6dbb-4102-bde9-2ee07d3008c4/859x860.png"
                  />
                </td>
              </tr>
            </table>

            <div align="left" class="greeting-container">
              <p>Hey User 2</p>
              <p>You've missed notifications. No worries.</p>
              <p>I'm here to give you an overview :)</p>
            </div>
            <div align="left" class="notifications-container">
              <div class="notifications-header">
                <img
                  class="notifications-header-icon"
                  width="30"
                  height="24"
                  alt=""
                  src="http://cdn.mcauto-images-production.sendgrid.net/cb5a685b085b7e7c/1e6f3be3-e6fd-46c5-b30f-bcde950b0dbc/165x131.png"
                />
                Missed Notifications
              </div>

              <p>
                New comment on your
                <a href="https://community.preciousplastic.com/test">how-to</a>
                by
                <a href="https://community.preciousplastic.com/u/user_1"
                  >User 1</a
                >
              </p>
              <p>
                New comment on your
                <a href="https://community.preciousplastic.com/test"
                  >research</a
                >
                by
                <a href="https://community.preciousplastic.com/u/user_3"
                  >User 3</a
                >
              </p>
              <p>
                <a href="https://community.preciousplastic.com/u/user_3"
                  >User 3</a
                >
                posted an update to this
                <a href="https://community.preciousplastic.com/test"
                  >research</a
                >
                you follow
              </p>

              <p>
                Your
                <a href="https://community.preciousplastic.com/test"
                  >research</a
                >
                needs updates
              </p>
            </div>
          </div>
          <table class="settings-table-container">
            <tr>
              <td align="center">
                <div class="notifications">
                  Manage your notifications
                  <a href="https://community.preciousplastic.com/settings">
                    here</a
                  >
                </div>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>
"
`;

exports[`create email test Creates email from pending notifications weekly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html>
  <head>
    <meta http-equiv="Content-Type" content="text/html charset=UTF-8" />
    <style>
      #body {
        font-family: Arial, Helvetica, sans-serif;
        font-size: 14px;
        color: #000000;
      }
      #body a {
        color: inherit;
      }
      .border {
        border: 3px solid black;
        border-radius: 10px;
        padding: 4% 0;
        margin: 4% 0;
        width: 550px;
      }
      table {
        width: 100%;
        border: 0;
      }
      .settings-table-container,
      .project-image-table-container {
        margin-bottom: 8%;
      }

      .greeting-container {
        margin-bottom: 8%;
      }
      .greeting-container,
      .notifications-container {
        margin-left: 8%;
      }
      .notifications-header {
        font-size: 24px;
      }
      .notifications-header-icon {
        margin-right: 8px;
      }

      @media only screen and (max-width: 550px) {
        .table-container {
          width: 100%;
        }
      }
    </style>
  </head>
  <body id="body">
    <table class="email-table-container">
      <tr>
        <td align="center">
          <div class="border">
            <table class="project-image-table-container">
              <tr>
                <td align="center">
                  <img
                    width="144"
                    alt=""
                    src="http://cdn.mcauto-images-production.sendgrid.net/cb5a685b085b7e7c/f48e2455-6dbb-4102-bde9-2ee07d3008c4/859x860.png"
                  />
                </td>
              </tr>
            </table>

            <div align="left" class="greeting-container">
              <p>Hey User 1</p>
              <p>You've missed notifications. No worries.</p>
              <p>I'm here to give you an overview :)</p>
            </div>
            <div align="left" class="notifications-container">
              <div class="notifications-header">
                <img
                  class="notifications-header-icon"
                  width="30"
                  height="24"
                  alt=""
                  src="http://cdn.mcauto-images-production.sendgrid.net/cb5a685b085b7e7c/1e6f3be3-e6fd-46c5-b30f-bcde950b0dbc/165x131.png"
                />
                Missed Notifications
              </div>

              <p>
                <a href="https://community.preciousplastic.com/u/user_2"
                  >User 2</a
                >
                found your
                <a href="https://community.preciousplastic.com/test">how-to</a>
                useful
              </p>

              <p>
                New comment on your
                <a href="https://community.preciousplastic.com/test"
                  >research</a
                >
                by
                <a href="https://community.preciousplastic.com/u/user_2"
                  >User 2</a
                >
              </p>
              <p>
                <a href="https://community.preciousplastic.com/u/user_3"
                  >User 3</a
                >
                mentioned you in this
                <a href="https://community.preciousplastic.com/test">how-to</a>
              </p>
              <p>
                Your
                <a href="https://community.preciousplastic.com/test">map pin</a>
                has been approved
              </p>
            </div>
          </div>
          <table class="settings-table-container">
            <tr>
              <td align="center">
                <div class="notifications">
                  Manage your notifications
                  <a href="https://community.preciousplastic.com/settings">
                    here</a
                  >
                </div>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>
"
`;
